--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>InventoryApp</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <title>ng-book 2: Inventory App</title>
+  <link rel="icon" type="image/png" href="public/images/favicon-32x32.png" sizes="32x32" />
+    <script src="/node_modules/core-js/client/shim.min.js"></script>
+    <script src="/node_modules/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
+  <link rel="stylesheet" type="text/css" href="public/vendor/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <app-root></app-root>
